--- a/package.json
+++ b/package.json
@@ -117,10 +117,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
+    "@babel/register": "^7.18.9",
     "@babel/runtime": "7.20.13",
     "@electron/universal": "^1.3.4",
     "@types/auto-launch": "^5.0.2",
@@ -136,11 +138,9 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "all-object-keys": "^2.2.0",
     "assert": "^2.0.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^29.4.2",
     "babel-loader": "^9.1.2",
     "babel-plugin-istanbul": "^6.1.1",
-    "babel-register": "^6.26.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "bufferutil": "^4.0.7",
@@ -161,7 +161,7 @@
     "electron-notarize": "^1.2.2",
     "electron-packager": "^17.1.1",
     "electron-windows-store": "^2.1.0",
-    "eslint": "^8.33.0",
+    "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
